--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,10 +2,8 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     package="xyz.junerver.testcaptureandrecord">
-
-    <!--悬浮窗权限-->
-    <uses-permission android:name="android.permission.SYSTEM_ALERT_WINDOW" />
-    <!--前台服务权限-->
+    <!-- 悬浮窗权限 -->
+    <uses-permission android:name="android.permission.SYSTEM_ALERT_WINDOW" /> <!-- 前台服务权限 -->
     <uses-permission android:name="android.permission.FOREGROUND_SERVICE" />
 
     <application
@@ -18,6 +16,9 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.TestCaptureAndRecord"
         tools:targetApi="31">
+        <activity
+            android:name=".RecordScreenActivity"
+            android:exported="false" />
         <activity
             android:name=".MainActivity"
             android:exported="true">
