--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -16,6 +16,11 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.TestCaptureAndRecord"
         tools:targetApi="31">
+        <service
+            android:name=".record.RecordService"
+            android:enabled="true"
+            android:exported="false"/>
+
         <activity
             android:name=".RecordScreenActivity"
             android:exported="false" />
