--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -16,10 +16,14 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.TestCaptureAndRecord"
         tools:targetApi="31">
+        <activity
+            android:name=".record.RecordWithServerActivity"
+            android:exported="false" />
+
         <service
             android:name=".record.RecordService"
             android:enabled="true"
-            android:exported="false"/>
+            android:exported="false" />
 
         <activity
             android:name=".RecordScreenActivity"
